Remove mailTransportConfig from config file
This will cause the application to use mailgun on Heroku.

--- a/config-default.json
+++ b/config-default.json
@@ -1,7 +1,4 @@
 {
     "port": 9093,
-    "baseUrl": "http://localhost:9093/",
-    "mailTransportConfig": {
-        "host": "localhost"
-    }
+    "baseUrl": "http://localhost:9093/"
 }
